# BallGame

./: .dockerignore  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/workflows/: ballgame.yml
BallGame/: __init__.py  asgi.py  models.py  services.py  settings.py  startup.py  urls.py  utils.py  views.py  views.py.old  wsgi.py
BallGame/dao/: __init__.py  players_dao.py  teams_dao.py  userattributes_dao.py  users_dao.py
BallGame/forms/: __init__.py  login_form.py  registration_form.py
BallGame/migrations/: 0001_initial.py  0001_player_bat_contact_player_bat_defense_player_bat_eye_and_more.py  0002_player_userattributes.py  0002_userattributes.py  __init__.py
BallGame/models/: __init__.py  player.py  team.py  user_attributes.py
BallGame/services/: __init__.py  playergen.py  randgen.py  teamutils.py  user_attributes_service.py
BallGame/static/BallGame/css/: homepage.css  main.css
BallGame/test/: test_dao.py
BallGame/views/: addplayer.py  ballgame.py  createplayers.py  homepage.py  index.py  login.py  logout.py  registration.py  team.py  teamlist.py  teammanager.py
BallGame/views/redirects/: addplayer.py  createplayers.py  logout.py
templates/: another.html  base-nav.html  footer.html  header.html  homepage.html  index.html  newteam.html  skeleton.html  team.html  teamlist.html
templates/account/: login.html  registration.html  registration_ok.html
